Started CSP onboarding
